--- a/pages/b-arrow.example.html
+++ b/pages/b-arrow.example.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Webpack App</title>
   <link href="../root/dist/all.css" rel="stylesheet"></head>
+  <!-- стили блока -->
   <link href="../root/dist/b-arrow.css" rel="stylesheet"></head>
   <body style="background: #999">
     <br />
@@ -13,5 +14,6 @@
     <div class="b-arrow b-arrow_size_medium b-arrow_direction_top"></div>
 
     <script type="text/javascript" src="../root/dist/all.js"></script>
+    <!-- js блока -->
     <script type="text/javascript" src="../root/dist/b-arrow.js"></script></body>
 </html>
