--- a/pages/index.html
+++ b/pages/index.html
@@ -7,13 +7,13 @@
     <link href="../root/dist/b-arrow.css" rel="stylesheet">
 </head>
 <body style="background: grey">
-    <div style="display: flex; justify-content: space-around; margin: 150px;">
+    <div style="display: flex; justify-content: space-around; margin: 150px; height: 100px;">
         <div class="b-arrow"></div>
         <div class="b-arrow b-arrow_direction_top b-arrow_bg_blue"></div>
         <div class="b-arrow b-arrow_direction_right b-arrow_bg_dark-blue"></div>
         <div class="b-arrow b-arrow_direction_left b-arrow_bg_azure"></div> 
     </div>
-    <div style="display: flex; justify-content: space-around; margin: 150px;">
+    <div style="display: flex; justify-content: space-around; margin: 150px; height: 100px;">
         <div class="b-arrow b-arrow_size_medium b-arrow_bg_gray"></div>
         <div class="b-arrow b-arrow_direction_top b-arrow_size_medium b-arrow_bg_invert"></div>
         <div class="b-arrow b-arrow_direction_right b-arrow_size_medium b-arrow_bg_done"></div>
