--- a/pages/index.html
+++ b/pages/index.html
@@ -6,18 +6,18 @@
     <link href="../root/dist/all.css" rel="stylesheet">
     <link href="../root/dist/b-arrow.css" rel="stylesheet">
 </head>
-<body style="background: grey">
-    <div style="display: flex; justify-content: space-around; margin: 150px; height: 100px;">
-        <div class="b-arrow"></div>
-        <div class="b-arrow b-arrow_direction_top b-arrow_bg_blue"></div>
-        <div class="b-arrow b-arrow_direction_right b-arrow_bg_dark-blue"></div>
-        <div class="b-arrow b-arrow_direction_left b-arrow_bg_azure"></div> 
+<body style="background: #999">
+    <div style="margin: 150px 150px 0;">
+        <div class="b-arrow b-arrow_direction_left b-arrow_bg_azure">Test test test test<br>test test test test</div>
+        <div class="b-arrow">Test test test test<br>test test test test<br>test test test test</div>
+        <div class="b-arrow b-arrow_direction_top b-arrow_bg_blue">Test test test test<br>test test test test</div>
+        <div class="b-arrow b-arrow_direction_right b-arrow_bg_dark-blue">Test test test test<br>test test test test<br>test test test test<br>test test test test</div> 
     </div>
-    <div style="display: flex; justify-content: space-around; margin: 150px; height: 100px;">
-        <div class="b-arrow b-arrow_size_medium b-arrow_bg_gray"></div>
-        <div class="b-arrow b-arrow_direction_top b-arrow_size_medium b-arrow_bg_invert"></div>
-        <div class="b-arrow b-arrow_direction_right b-arrow_size_medium b-arrow_bg_done"></div>
-        <div class="b-arrow b-arrow_direction_left b-arrow_size_medium b-arrow_bg_default"></div>
+    <div style="margin: 150px 150px 0;">
+        <div class="b-arrow b-arrow_direction_left b-arrow_size_medium b-arrow_bg_default">Test test test test<br>test test test test</div>
+        <div class="b-arrow b-arrow_size_medium b-arrow_bg_gray">Test test test test<br>test test test test<br>test test test test</div>
+        <div class="b-arrow b-arrow_direction_top b-arrow_size_medium b-arrow_bg_invert">Test test test test<br>test test test test</div>
+        <div class="b-arrow b-arrow_direction_right b-arrow_size_medium b-arrow_bg_done">Test test test test<br>test test test test<br>test test test test<br>test test test test</div>
     </div>
 
     <script type="text/javascript" src="../root/dist/all.js"></script>
