CSS instead of pictures

--- a/pages/b-steps.html
+++ b/pages/b-steps.html
@@ -16,6 +16,27 @@
             <span class="b-steps__item-arrow"></span>
         </a>
     </li>
+<br /><br />
+    <li class="b-steps__item-wrapper">
+        <a href="#" class="b-steps__item b-steps__item_state_hold" onclick="return false;">
+            <span class="b-steps__item-text">Hold</span>
+            <span class="b-steps__item-arrow"></span>
+        </a>
+    </li>
+<br /><br />
+    <li class="b-steps__item-wrapper">
+        <a href="#" class="b-steps__item b-steps__item_state_current" onclick="return false;">
+            <span class="b-steps__item-text">Curr</span>
+            <span class="b-steps__item-arrow"></span>
+        </a>
+    </li>
+<br /><br />
+    <li class="b-steps__item-wrapper">
+        <a href="#" class="b-steps__item b-steps__item_state_next" onclick="return false;">
+            <span class="b-steps__item-text">Next</span>
+            <span class="b-steps__item-arrow"></span>
+        </a>
+    </li>
 
 </ul>
 
