--- a/pages/b-price.html
+++ b/pages/b-price.html
@@ -7,7 +7,7 @@
     <link href="../root/dist/b-price.css" rel="stylesheet">
 </head>
 <body style="background: #999">
-   <span class="b-price>
+   <span class="b-price">
        <span class="b-price__free">price-a</span>
        <span class="b-price__amount">price-b</span>
        <span class="b-price__from">price-c</span>
